[package]
name = "vnv"
version = "0.0.1"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = { version = "4.5.3", features = ["derive"] }
regex = "^1.10.3"
colored = "2.0"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
