[package]
name = "vnv"
version = "0.1.0"
authors = ["Aidan Bleser"]
edition = "2021"
readme = "README.md"
documentation = "https://github.com/ieedan/valid-env"
homepage = "https://github.com/ieedan/valid-env"
description = "🔒 A decorator enhanced .env syntax for validating your environment variables all within your .env file."
repository = "https://github.com/ieedan/valid-env"
keywords = [".env", "validate", "environment", "variables"]
license = "MIT"
license_file = "LICENSE"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = { version = "4.5.3", features = ["derive"] }
regex = "^1.10.3"
colored = "2.0"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
